--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dispatchedjs/sdk",
   "version": "0.0.1",
-  "description": "SDK & CLI for Dispatched",
+  "description": "Dispatched SDK for JavaScript",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
