--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - README.md
       - .gitignore
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node_version }}
-          
+
       - name: npm install, build, and test
         run: |
           npm install
@@ -33,10 +33,8 @@ jobs:
           git reset --hard
           git config --local --list
           git checkout master
-          git config user.email "$GH_EMAIL"
-          git config user.name "Francisco Hodge"
-        env:
-          GH_EMAIL: ${{secrets.GH_EMAIL}}
+          git config user.email "info@dispatched.dev"
+          git config user.name "Dispatched"
 
       - name: Bump version
         run: |
