--- a/.github/workflows/pull_request_dependabot.yml
+++ b/.github/workflows/pull_request_dependabot.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           npm install
           npm run test
+          npm run build
         env:
           CI: true
       - name: Merge PR
