--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/dist/
+/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# misc
+.vscode/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.vscode
+.idea/
+*.iml
+
+.env
+.env.*
+!.env.example
 
 npm-debug.log*
 yarn-debug.log*
