--- a/package.json
+++ b/package.json
@@ -1,77 +1,37 @@
 {
-  "name": "@hodgef/ts-library-boilerplate-basic",
-  "version": "1.1.316",
-  "description": "Typescript Minimal Starter Kit for building libraries",
-  "main": "build/index.js",
-  "types": "build/types/index.d.ts",
-  "scripts": {
-    "start": "webpack serve --config webpack.config.demo.js",
-    "build": "webpack && tsc",
-    "build:demo": "webpack --config webpack.config.demo.js",
-    "test": "jest --silent",
-    "coverage": "npm run test -- --coverage",
-    "prepare": "npm run build",
-    "trypublish": "npm publish || true"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hodgef/ts-library-boilerplate-basic"
-  },
-  "author": "Francisco Hodge <hello@franciscohodge.com> (https://github.com/hodgef)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hodgef/ts-library-boilerplate-basic/issues"
-  },
-  "homepage": "https://github.com/hodgef/ts-library-boilerplate-basic",
-  "keywords": [
-    "library",
-    "starter",
-    "es6"
+  "name": "@dispatchedjs/sdk",
+  "version": "1.0.0",
+  "description": "DispatchedJS SDK for JavaScript",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
   ],
-  "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-transform-typescript": "^7.26.3",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.26.0",
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.2.1",
-    "babel-preset-minify": "^0.5.2",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint": "^7.32.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.11",
-    "typescript": "^4.9.5",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "4.13.3"
+  "scripts": {
+    "build": "rollup -c",
+    "test": "jest",
+    "prepare": "npm run build"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/testMock.js",
-      "\\.(css|less)$": "<rootDir>/scripts/testMock.js"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
+  "keywords": [
+    "typescript",
+    "browser"
+  ],
+  "author": "Dispatched <info@dispatched.dev>",
+  "license": "MIT",
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^22.10.5",
+    "jest": "^27.4.7",
+    "rollup": "^2.66.1",
+    "ts-jest": "^27.1.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "yargs": "^17.7.2"
   }
 }
