--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "trypublish": "npm publish --access public"
   },
   "keywords": [
     "typescript",
