--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "keywords": [
     "typescript",
-    "browser"
+    "nodejs",
+    "sdk",
+    "dispatched.dev",
+    "queue"
   ],
   "author": "Dispatched <info@dispatched.dev>",
   "repository": {
@@ -26,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/dispatched-dev/dispatchedjs-sdk/issues"
   },
-  "homepage": "https://dispatched.dev/",
+  "homepage": "https://dispatched.dev",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
